# sigma-file-manager

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .stylelintrc  .stylelintrc.json  AGENTS.md  BAKERS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PRIVACY_POLICY.md  README.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  sigma-ui.config.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vue.config.js
.github/: FUNDING.yml  labels.json
.github/ISSUE_TEMPLATE/: Feature_request.md  Problem_report.md  feature_request.md  feature_request.yml  problem_report.md  problem_report.yml  problem_report_forms.yml
.github/workflows/: bot-comment-support-developer.yml  ci.yml  label-supporter.yml  msix.yml  release.yml  sign-windows.yml  winget.yml
.husky/: pre-commit
.signpath/artifact-configurations/: windows-signed-setup.xml
e2e-webdriver/: .gitignore  package-lock.json  package.json  wdio.conf.js
e2e-webdriver/scripts/: install-edge-driver.mjs  resolve-edge-driver.mjs
flatpak/: build-flatpak.sh  com.sigma-file-manager.app.metainfo.xml  com.sigma-file-manager.app.yml
public/: errorWindow.html  index.html  quickViewWindow.html  startup-recovery.js  trashManagerWindow.html
public/configs/: homeBanner.config.json
public/game/: index.html
public/server/: ftp.html  test.js
scripts/: patch-tauri-windows-bundle.js  sync-i18n.js  sync-license.js  sync-version.js  verify-msix-default-file-manager.ps1  verify-msix-store-compatibility.ps1  vitest-run.mjs
snap/: snapcraft.yaml
src/: App.vue  app.vue  appPaths.js  appendLicense.js  electronMain.js  electronRenderer.js  homeBannerMediaData.js  main.ts  prepareFilesForBuild.js  prepareFilesForDev.js  router.js  setPrototype.js  shortcuts.js  store.js  vite-env.d.ts
src-shared/: user-storage-files.json
src-tauri/: .gitignore  Cargo.toml  build.rs  default-file-manager-paths.rs  tauri.conf.json
src-tauri/Data/: Log.txt
src-tauri/assets/lan_share/: lan_share_ftp.html  lan_share_stream.html
src-tauri/capabilities/: default.json
src-tauri/default-file-manager-common/: Cargo.toml
src-tauri/default-file-manager-common/src/: lib.rs
src-tauri/default-file-manager-launcher/: Cargo.toml
src-tauri/default-file-manager-launcher/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/patches/drag/: Cargo.toml  LICENSE_MIT
src-tauri/patches/drag/src/: lib.rs
src-tauri/patches/drag/src/platform_impl/: mod.rs
src-tauri/patches/drag/src/platform_impl/gtk/: mod.rs
src-tauri/patches/drag/src/platform_impl/macos/: mod.rs
src-tauri/patches/drag/src/platform_impl/windows/: image.rs  mod.rs
src-tauri/src/: app_state.rs  app_updater.rs  archive.rs  background_sources.rs  clipboard_source.rs  clipboard_watcher.rs  copy_move_job.rs  default_file_manager.rs  delete_job.rs  dev.rs  dir_reader.rs  dir_size.rs  dir_watcher.rs  extensions.rs  file_operations.rs  fs_api.rs  global_search.rs  image_thumbnails.rs  input_simulation.rs  lan_share.rs  lan_share_ftp.html  lan_share_stream.html  lib.rs  link_operations.rs  listeners.rs  main.rs  media_processor.rs  memory_info.rs  open_with.rs  process_runner.rs  startup_storage_bootstrap.rs  storage_info.rs  system_clipboard.rs  system_icons.rs  system_info.rs  system_tray.rs  url_drop.rs  user_settings.rs  user_storage_files_config.rs  utils.rs  (+3 more)
src-tauri/src/archive/: compress.rs  encoding.rs  extract.rs  jobs.rs  mod.rs
src-tauri/src/default_file_manager/: external_registry.rs  launcher.rs  registry.rs
src-tauri/src/dir_reader/: blocking_timeout.rs  commands.rs  drives.rs  drives_platform.rs  mount.rs  mountable.rs  network_shares.rs  path_helpers.rs  path_volume.rs  read.rs  types.rs
src-tauri/src/extensions/: archives.rs  binaries.rs  commands.rs  extension_http.rs  filesystem.rs  fs_ops.rs  github.rs  http.rs  install.rs  manifest_permissions.rs  misc.rs  paths.rs  processes.rs  registry_storage.rs  security.rs  state.rs  types.rs
src-tauri/src/global_search/: commands.rs  ignore.rs  index.rs  query.rs  scan.rs  scoring.rs  state.rs  types.rs
src-tauri/src/lan_share/: commands.rs  handlers.rs  mdns.rs  network.rs  server.rs  streaming.rs  tls.rs  types.rs
src-tauri/src/open_with/: linux.rs  mod.rs  types.rs  utils.rs
src-tauri/src/open_with/linux/: desktop.rs  mime.rs  mod.rs  open.rs
src-tauri/src/open_with/windows/: associated_programs.rs  explorer_command.rs  icon_utils.rs  mod.rs  open_path.rs  shell_menu.rs  utils.rs
src-tauri/src/system_clipboard/: files.rs  image.rs  mod.rs  text.rs  types.rs  windows.rs
src-tauri/src/terminal/: jsonc.rs  linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/components/: ActionToolbar.vue  AddressBar.vue  BasicItemCardIterator.vue  BasicMenu.vue  ClipboardToolbar.vue  ContextMenus.vue  DeviceSection.vue  DialogGenerator.vue  Dialogs.vue  DirItem.vue  DirItemRow.vue  DragSortableList.vue  DriveCardsIterator.vue  FilterField.vue  FsLocalServerManager.vue  GlobalSearch.vue  HelloWorld.vue  HomeBanner.vue  HomeBannerMenu.vue  InfoPanel.vue  ItemCard.vue  ItemCardGrid.vue  MediaIterator.vue  NavigationPanel.vue  NavigatorTab.vue  NavigatorTabBar.vue  NoteCard.vue  NotificationCard.vue  NotificationManager.vue  NotificationMenu.vue  Overlays.vue  SectionSettings.vue  ShortcutList.vue  SortableList.vue  SortingColumnMenu.vue  SortingHeader.vue  TabsMenu.vue  TextEditor.vue  UpdatingComponent.vue  UserDirsSection.vue  (+5 more)
src/composables/: system-icon-cache.ts  use-clipboard-focus-sync.ts  use-conflict-resolution-dialog.ts  use-copy-move-with-conflicts.ts  use-dir-entry-actions.ts  use-drop-target-registry.ts  use-file-drop-operation.ts  use-horizontal-fixed-virtual-list.ts  use-horizontal-scroll-fade.ts  use-init.ts  use-lan-share.ts  use-navigator-item-icon.ts  use-page-drop-zone.ts  use-page-layout-scroll-restoration.ts  use-permanent-delete-confirm.ts  use-relative-date-display.ts  use-responsive-query.ts  use-restored-active-tab.ts  use-scroll-restoration.ts  use-system-icon.ts  use-tag-inline-editor.ts  use-text-direction.ts  use-vertical-virtual-list.ts  (+1 more)
(+1175 files in other folders)
