[package]
name = "sigma-file-manager"
description = "Sigma File Manager"
version = "2.0.0-beta.3"
license = "GPL-3.0-or-later"
authors = ["Aleksey Hoffman"]
repository = "https://github.com/aleksey-hoffman/sigma-file-manager"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sigma_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
devtools = []

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [ "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-system-fonts = "2"
sysinfo = { version = "0.38", features = ["linux-netdevs"] }
trash = "5.2.5"
base64 = "0.22"
png = "0.18"
file_icon_provider = "1.0.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico"] }
lru = "0.16"
once_cell = "1.21"
dirs = "5"
tantivy = "0.25"
walkdir = "2.5"
rayon = "1.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
notify = "8"
tauri-plugin-drag = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
httpdate = "1.0"
futures-util = "0.3"
zip = "8.4"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.1"
sha2 = "0.11"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2"
axum = { version = "0.8", features = ["multipart"] }
mime_guess = "2"
mdns-sd = { version = "0.18", features = ["async"] }
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
local-ip-address = "0.6"
rcgen = "0.14"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "test-util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Environment",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Environment",
] }
