[package]
name = "sigma-file-manager"
description = "Sigma File Manager"
version = "2.1.1"
license = "GPL-3.0-or-later"
authors = ["Aleksey Hoffman"]
repository = "https://github.com/aleksey-hoffman/sigma-file-manager"
edition = "2021"
rust-version = "1.88.0"

[workspace]
members = [".", "default-file-manager-launcher"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sigma_file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
devtools = []

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [ "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-system-fonts = "2"
sysinfo = { version = "0.38", features = ["linux-netdevs"] }
trash = "5.2.6"
base64 = "0.22"
png = "0.18"
file_icon_provider = "1.0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico"] }
lru = "0.18"
once_cell = "1.21"
dirs = "6"
tantivy = "0.26"
walkdir = "2.5"
rayon = "1.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
notify = "8"
tauri-plugin-drag = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
httpdate = "1.0"
futures-util = "0.3"
zip = "8.6"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.1"
sha2 = "0.11"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2"
axum = { version = "0.8", features = ["multipart"] }
mime_guess = "2"
mdns-sd = { version = "0.20", features = ["async"] }
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2"
local-ip-address = "0.6"
rcgen = "0.14"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
globset = "0.4.18"
encoding_rs = "0.8"
dunce = "1"
arboard = "3.6.1"

# TODO: Remove this patch once drag-rs ships a fix for network-path outbound drag on Windows.
# Upstream: https://github.com/crabnebula-dev/drag-rs/issues/72
[patch.crates-io]
drag = { path = "./patches/drag" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "test-util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
roxmltree = "0.21"
webview-com-bindings-core = { package = "windows-core", version = "0.61.2" }
webview2-com = "0.38.2"
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Environment",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_DataExchange",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Environment",
] }
