[package]
name = "sigma-file-manager-launcher"
description = "Shell launcher for Sigma File Manager default file manager integration"
version = "2.2.0"
license = "GPL-3.0-or-later"
authors = ["Aleksey Hoffman"]
edition = "2021"
publish = false

[[bin]]
name = "sigma-file-manager-launcher"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
serde_json = "1"
sfm-default-file-manager-common = { path = "../default-file-manager-common" }
winreg = "0.56"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
